@@ -1,117 +1,18 @@
+plugins {
+    id 'nebula.netflixoss' version '2.2.7'
+    id 'nebula.provided-base' version '2.2.0'
+}
+
 // Establish version and status
 ext.githubProjectName = 'Priam'
 
-buildscript {
-    repositories {
-        mavenLocal()
-        mavenCentral() // maven { url 'http://jcenter.bintray.com' }
-    }
-    apply from: file('gradle/buildscript.gradle'), to: buildscript 
-}
-
-allprojects {
-    repositories { 
-        mavenCentral() // maven { url: 'http://jcenter.bintray.com' }
-    }
-}
-
-apply from: file('gradle/convention.gradle')
-apply from: file('gradle/maven.gradle')
-//apply from: file('gradle/check.gradle')
-apply from: file('gradle/license.gradle')
-apply from: file('gradle/release.gradle')
-
-apply plugin: 'idea'
-
 subprojects {
-    apply plugin: 'idea'
-    apply plugin: 'eclipse'
-    apply plugin: 'java'
+    apply plugin: 'nebula.netflixoss'
 
-    group = "com.netflix.priam"
+    group = 'com.netflix.priam'
 
-    configurations {
-        provided
-        compile.extendsFrom provided
-    }
-
-    dependencies {
-        compile "commons-lang:commons-lang:2.6"
-        compile "commons-logging:commons-logging:1.1.3"
-        compile "commons-collections:commons-collections:3.2.1"
-        compile "commons-io:commons-io:2.0.1"
-        compile "commons-cli:commons-cli:1.2"
-        compile "commons-httpclient:commons-httpclient:3.1"
-        compile "com.sun.jersey.contribs:jersey-multipart:1.1.4.1"
-        compile "com.sun.jersey:jersey-json:1.9.1"
-        compile "com.google.guava:guava:14.0.1"
-        compile "com.google.code.findbugs:jsr305:1.3.9"
-        compile "com.amazonaws:aws-java-sdk:1.3.27"
-        compile "com.google.inject:guice:3.0"
-        compile "com.sun.jersey:jersey-bundle:1.9.1"
-        compile "com.sun.jersey.contribs:jersey-guice:1.9.1"
-        compile "com.google.inject.extensions:guice-servlet:3.0"
-        compile "com.google.code.findbugs:jsr305:1.3.9"
-        compile "org.quartz-scheduler:quartz:1.7.3"
-        compile "com.googlecode.json-simple:json-simple:1.1"
-        compile "org.xerial.snappy:snappy-java:1.0.5-M3"
-        compile "org.yaml:snakeyaml:1.10"
-        compile "org.apache.cassandra:cassandra-all:[1.2.0,1.2.8["
-        compile "javax.ws.rs:jsr311-api:1.1.1"
-        compile "joda-time:joda-time:2.0"
-        compile "commons-configuration:commons-configuration:1.5"
-        compile "xerces:xercesImpl:2.4.0"
-        compile "net.java.dev.jna:jna:3.2.3"
-        compile "org.apache.httpcomponents:httpclient:4.2.2"
-        compile "org.apache.httpcomponents:httpcore:4.2.2"
-        compile "com.ning:compress-lzf:0.9.5"
-        compile "org.slf4j:slf4j-api:1.6.1"
-        compile "org.slf4j:slf4j-log4j12:1.6.1"
-        provided "javax.servlet:servlet-api:2.5"
-        testCompile "com.googlecode.jmockit:jmockit:0.999.17"
-        testCompile "junit:junit:4.8"
+    repositories {
+        jcenter()
     }
 }
 
-project(':priam-cass-extensions') {
-    jar {
-        manifest { attributes 'Premain-Class': 'com.netflix.priam.cassandra.extensions.PriamStartupAgent' }
-    }
-    dependencies {
-    }
-}
-
-project(':priam') {
-    dependencies {
-    }
-    test {
-        // -Xms256m -Xmx1024m -XX:MaxPermSize=512m
-        // -javaagent:"${settings.localRepository}"/com/googlecode/jmockit/jmockit/0.999.12/jmockit-0.999.12.jar
-    }
-}
-
-project(':priam-dse-extensions') {
-    dependencies {
-        compile project(':priam')
-        testCompile project(path: ':priam', configuration: 'testCompile')
-        testCompile project(':priam').sourceSets.test.output
-    }
-}
-
-project(':priam-web') {
-    apply plugin: 'war'
-    apply plugin: 'jetty'
-    dependencies {
-        compile project(':priam')
-        compile project(':priam-agent')
-        compile project(':priam-dse-extensions')
-        compile project(':priam-cass-extensions')
-    }
-}
-
-project(':priam-agent') {
-    dependencies {
-        compile project(':priam')
-        compile 'com.netflix.astyanax:astyanax:1.56.42'
-    }
-}
